# BaxterPlugin

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
plugins/baxter-polarion/mcp-servers/: .gitignore  README.md  polarion-mcp.env.example  pyproject.toml
plugins/baxter-polarion/mcp-servers/.cursor/: mcp.json
plugins/baxter-polarion/mcp-servers/docs/: OPERATIONS.md
plugins/baxter-polarion/mcp-servers/dotnet/: PolarionMcp.sln
plugins/baxter-polarion/mcp-servers/dotnet/PolarionMcp.Client/: PolarionClient.cs  PolarionClientOptions.cs  PolarionMcp.Client.csproj  SoapEndpointBehaviors.cs  TlsHttpClientEndpointBehavior.cs
plugins/baxter-polarion/mcp-servers/dotnet/PolarionMcp.Client.Tests/: PolarionClientOptionsTests.cs  PolarionMcp.Client.Tests.csproj  ServerLoggingTests.cs
plugins/baxter-polarion/mcp-servers/dotnet/PolarionMcp.Client/ConnectedServices/SessionWebService/: Reference.cs  dotnet-svcutil.params.json
plugins/baxter-polarion/mcp-servers/dotnet/PolarionMcp.Server/: PolarionEnvFileLoader.cs  PolarionMcp.Server.csproj  PolarionTools.cs  Program.cs  ServerLogging.cs
plugins/baxter-polarion/mcp-servers/dotnet/PolarionMcp.Smoke/: PolarionMcp.Smoke.csproj  Program.cs
plugins/baxter-polarion/mcp-servers/dotnet/scripts/: generate-proxies.sh
plugins/baxter-polarion/mcp-servers/polarion_mcp/: __init__.py  config.py  polarion_client.py  server.py
plugins/baxter-polarion/mcp-servers/scripts/: check_docs_drift.sh  test_tools.py
plugins/baxter-polarion/mcp-servers/tests/: test_comments.py  test_documents.py  test_links.py  test_reviews.py  test_workflow.py
(+266 files in other folders)
