[project]
name = "polarion-mcp"
version = "0.1.0"
description = "MCP server for Polarion work item management via WSDL/SOAP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "zeep>=4.2.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
polarion-mcp = "polarion_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["polarion_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
